k8s/spack/www-spack-io/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spack-io
  namespace: spack
  labels:
    app: spack-io
    svc: web
spec:
  selector:
    matchLabels:
      app: spack-io
      svc: web
  replicas: 2
  template:
    metadata:
      labels:
        app: spack-io
        svc: web
    spec:
      containers:
      - name: web
        image: "ghcr.io/spack/spack.io:latest"
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
      nodeSelector:
        spack.io/node-pool: base

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spack-io-redirect
  namespace: spack
  labels:
    app: spack-io
    svc: web-redirect
spec:
  selector:
    matchLabels:
      app: spack-io
      svc: web-redirect
  replicas: 2
  template:
    metadata:
      labels:
        app: spack-io
        svc: web-redirect
    spec:
      containers:
      - name: web
        image: "schmunk42/nginx-redirect"
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
      nodeSelector:
        spack.io/node-pool: base
