k8s/spack/www-spack-io/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: spack-io
  namespace: spack
  labels:
    app: spack-io
    svc: web
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: spack-io
    svc: web

# TODO(opadron): enable this redirector after migrating DNS
---
apiVersion: v1
kind: Service
metadata:
  name: spack-io-redirect
  namespace: spack
  labels:
    app: spack-io
    svc: web-redirect
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: spack-io
    svc: web-redirect
